@@ -23,6 +23,11 @@
 	* config/arm/linux-elf.h (CPP_PREDEFINES): Don't define `arm' or
 	`arm_elf'; do define `__arm__'.
 
+	2000-08-22  Richard Henderson  <rth@cygnus.com>
+	* alias.c (init_alias_analysis): Do not register
+	struct_value_incoming_rtx or static_chain_rtx as pointing
+	to stack memory.
+
 2000-12-22  Bernd Schmidt  <bernds@redhat.co.uk>
 
 	* calls.c (emit_call_1): Fall back to call_pop/call_value_pop if no
